sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/Opportunity_Status_PDOA_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-2796: It stores the mapping of opportunity stage with conditions to be satisfied for populating PDOA value on parent Work Orders.</description>
    <label>Opportunity Status To PDOA Mapping</label>
    <pluralLabel>Opportunity Status To PDOA Mappings</pluralLabel>
</CustomObject>