sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Compare_Values__c.field-meta.xml
<CustomField>
    <fullName>Compare_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2796: It indicates whether there is any condition to be checked before populating PDOA on Work Order.</description>
    <label>Compare Values</label>
    <type>Checkbox</type>
</CustomField>