sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Field_To_Refer__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Refer__c</fullName>
    <description>LEM-2796: It indicates the field which should be referred from the 'Object To Refer' for populating PDOA on Work Order.</description>
    <label>Field To Refer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>