sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Nintex_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Mapping__c</fullName>
    <description>LEM-2796: It indicates the related Nintex Use Case To Work Order Mapping for current PDOA mapping.</description>
    <label>Nintex Mapping</label>
    <referenceTo>Nintex_Work_Order_Mapping__mdt</referenceTo>
    <relationshipLabel>Opportunity Status To PDOA Mappings</relationshipLabel>
    <relationshipName>PDOAMappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>