sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Object_To_Refer__c.field-meta.xml
<CustomField>
    <fullName>Object_To_Refer__c</fullName>
    <description>LEM-2796: It indicates the object API name to be referred for populating PDOA on Work Order.</description>
    <label>Object To Refer</label>
    <length>45</length>
    <type>Text</type>
</CustomField>