sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Offset_To_Apply__c.field-meta.xml
<CustomField>
    <fullName>Offset_To_Apply__c</fullName>
    <defaultValue>0</defaultValue>
    <description>LEM-2796: It indicates the offset value to be added for 'Value To Apply' or 'Field To Refer' for populating PDOA on Work Order.</description>
    <label>Offset to Apply</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>