sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Offset_To_Compare__c.field-meta.xml
<CustomField>
    <fullName>Offset_To_Compare__c</fullName>
    <defaultValue>0</defaultValue>
    <description>LEM-2796: It indicates offset value to be added with 'Value To Compare' for the condition to be satisfied for population of PDOA.</description>
    <label>Offset to Compare</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>