sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>LEM-2796: It indicates the operator to be used for satisfying condition for populating PDOA on Work Order.</description>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EQUALS</fullName>
                <default>true</default>
                <label>EQUALS</label>
            </value>
            <value>
                <fullName>NOT_EQUAL</fullName>
            </value>
            <value>
                <fullName>FIELD_CONTAINS_VALUE</fullName>
            </value>
            <value>
                <fullName>FIELD_DOES_NOT_CONTAIN_VALUE</fullName>
            </value>
            <value>
                <fullName>GREATER_THAN_EQUALS</fullName>
            </value>
            <value>
                <fullName>LESS_THAN</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>