sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>LEM-2796: It indicates the priority number in which the conditions will be evaluated for populating PDOA on Work Order.</description>
    <label>Order Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>