sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Override_Offset_To_Apply__c.field-meta.xml
<CustomField>
    <fullName>Override_Offset_To_Apply__c</fullName>
    <defaultValue>0</defaultValue>
    <description>LEM-2796: It indicates offset value to be added if any sub type is overriden in &apos;Sub Type To Override&apos; field to populate PDOA.</description>
    <inlineHelpText>It is applied when 'Sub Type To Override' sub type to is populated</inlineHelpText>
    <label>Override Offset To Apply</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>