sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Sub_Type_To_Override__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_To_Override__c</fullName>
    <description>LEM-2796: It indicates the Work Order sub type value when overriden by system then needs to be matched while adding the offset for populating PDOA.</description>
    <label>Sub Type To Override</label>
    <inlineHelpText>It is currently used when opportunity supports drive auto-activations</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Activations</fullName>
                <default>true</default>
                <label>Auto-Activations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>