sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Value_To_Apply__c.field-meta.xml
<CustomField>
    <fullName>Value_To_Apply__c</fullName>
    <description>LEM-2796: It indicates the value to be applied once the condition is satisfied for populating PDOA on Work Order.</description>
    <label>Value To Apply</label>
    <length>25</length>
    <type>Text</type>
</CustomField>