sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Value_To_Apply_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_To_Apply_Type__c</fullName>
    <description>LEM-2796: It indicates the type of value to be applied once the condition is satisfied for populating PDOA on Work Order.</description>
    <inlineHelpText>The value 'Self' indicates that there would not be any comparison condition to be satisfied before applying value
    </inlineHelpText>
    <label>Value To Apply Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
                <default>true</default>
                <label>Self</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Custom Field</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>