sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/fields/Value_To_Compare__c.field-meta.xml
<CustomField>
    <fullName>Value_To_Compare__c</fullName>
    <description>LEM-2796: It indicates value to compare for a condition to satisfy for populating PDOA on Work Order.</description>
    <label>Value To Compare</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Today</fullName>
                <default>true</default>
                <label>Today</label>
            </value>
            <value>
                <fullName>Yesterday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>