sfdx-source/force-app/main/default/objects/Opportunity_Status_PDOA_Mapping__mdt/listViews/All_PDOA_Mappings.listView-meta.xml
<ListView>
    <fullName>All_PDOA_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>Nintex_Mapping__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Object_To_Refer__c</columns>
    <columns>Field_To_Refer__c</columns>
    <columns>Compare_Values__c</columns>
    <filterScope>Everything</filterScope>
    <label>All PDOA Mappings</label>
</ListView>